--- a/config/theme.yml
+++ b/config/theme.yml
@@ -143,6 +143,46 @@ global_settings:
       width: 170
       height: 115
       scope: [ stores ]
+    stores_default_2x:
+      width: 340
+      height: 130
+      scope: [ stores ]
+    default_xs:
+      width: 120
+      height: 120
+      scope: [products, manufacturers, suppliers, categories]
+    default_s:
+      width: 160
+      height: 160
+      scope: [categories, products]
+    default_m:
+      width: 200
+      height: 200
+      scope: [stores, manufacturers, suppliers, products]
+    default_md:
+      width: 250
+      height: 250
+      scope: [categories, products]
+    default_xl:
+      width: 400
+      height: 400
+      scope: [stores, products]
+    product_main:
+      width: 450
+      height: 450
+      scope: [products]
+    category_cover:
+      width: 1000
+      height: 200
+      scope: [categories]
+    product_main_2x:
+      width: 900
+      height: 900
+      scope: [products]
+    category_cover_2x:
+      width: 2000
+      height: 400
+      scope: [categories]
   new_password_policy_feature: true
 
 theme_settings:
